build/log/idf_py_stdout_output_394052
[1/11] Building C object esp-idf/touch_sensor/CMakeFiles/__idf_touch_sensor.dir/touch_sensor.c.obj
FAILED: esp-idf/touch_sensor/CMakeFiles/__idf_touch_sensor.dir/touch_sensor.c.obj 
/root/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2-dev-1051-g17d6768e65-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/kali/esp/touch_sensor/build/config -I/home/kali/esp/touch_sensor/components/touch_sensor -I/home/kali/esp/esp-idf/components/newlib/platform_include -I/home/kali/esp/esp-idf/components/freertos/config/include -I/home/kali/esp/esp-idf/components/freertos/config/include/freertos -I/home/kali/esp/esp-idf/components/freertos/config/xtensa/include -I/home/kali/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/kali/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/kali/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/kali/esp/esp-idf/components/freertos/esp_additions/include -I/home/kali/esp/esp-idf/components/esp_hw_support/include -I/home/kali/esp/esp-idf/components/esp_hw_support/include/soc -I/home/kali/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/kali/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/kali/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/kali/esp/esp-idf/components/heap/include -I/home/kali/esp/esp-idf/components/log/include -I/home/kali/esp/esp-idf/components/soc/include -I/home/kali/esp/esp-idf/components/soc/esp32 -I/home/kali/esp/esp-idf/components/soc/esp32/include -I/home/kali/esp/esp-idf/components/hal/esp32/include -I/home/kali/esp/esp-idf/components/hal/include -I/home/kali/esp/esp-idf/components/hal/platform_port/include -I/home/kali/esp/esp-idf/components/esp_rom/include -I/home/kali/esp/esp-idf/components/esp_rom/include/esp32 -I/home/kali/esp/esp-idf/components/esp_rom/esp32 -I/home/kali/esp/esp-idf/components/esp_common/include -I/home/kali/esp/esp-idf/components/esp_system/include -I/home/kali/esp/esp-idf/components/esp_system/port/soc -I/home/kali/esp/esp-idf/components/esp_system/port/include/private -I/home/kali/esp/esp-idf/components/xtensa/esp32/include -I/home/kali/esp/esp-idf/components/xtensa/include -I/home/kali/esp/esp-idf/components/xtensa/deprecated_include -I/home/kali/esp/esp-idf/components/lwip/include -I/home/kali/esp/esp-idf/components/lwip/include/apps -I/home/kali/esp/esp-idf/components/lwip/include/apps/sntp -I/home/kali/esp/esp-idf/components/lwip/lwip/src/include -I/home/kali/esp/esp-idf/components/lwip/port/include -I/home/kali/esp/esp-idf/components/lwip/port/freertos/include -I/home/kali/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/kali/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/kali/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/kali/esp/esp-idf/components/driver/include -I/home/kali/esp/esp-idf/components/driver/deprecated -I/home/kali/esp/esp-idf/components/driver/analog_comparator/include -I/home/kali/esp/esp-idf/components/driver/dac/include -I/home/kali/esp/esp-idf/components/driver/gpio/include -I/home/kali/esp/esp-idf/components/driver/gptimer/include -I/home/kali/esp/esp-idf/components/driver/i2c/include -I/home/kali/esp/esp-idf/components/driver/i2s/include -I/home/kali/esp/esp-idf/components/driver/ledc/include -I/home/kali/esp/esp-idf/components/driver/mcpwm/include -I/home/kali/esp/esp-idf/components/driver/parlio/include -I/home/kali/esp/esp-idf/components/driver/pcnt/include -I/home/kali/esp/esp-idf/components/driver/rmt/include -I/home/kali/esp/esp-idf/components/driver/sdio_slave/include -I/home/kali/esp/esp-idf/components/driver/sdmmc/include -I/home/kali/esp/esp-idf/components/driver/sigma_delta/include -I/home/kali/esp/esp-idf/components/driver/spi/include -I/home/kali/esp/esp-idf/components/driver/temperature_sensor/include -I/home/kali/esp/esp-idf/components/driver/touch_sensor/include -I/home/kali/esp/esp-idf/components/driver/twai/include -I/home/kali/esp/esp-idf/components/driver/uart/include -I/home/kali/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/kali/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/kali/esp/esp-idf/components/esp_pm/include -I/home/kali/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/kali/esp/touch_sensor=. -fmacro-prefix-map=/home/kali/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/touch_sensor/CMakeFiles/__idf_touch_sensor.dir/touch_sensor.c.obj -MF esp-idf/touch_sensor/CMakeFiles/__idf_touch_sensor.dir/touch_sensor.c.obj.d -o esp-idf/touch_sensor/CMakeFiles/__idf_touch_sensor.dir/touch_sensor.c.obj -c /home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c
/home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c: In function 'tp_read_task':
/home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c:30:38: error: format '%i' expects a matching 'int' argument [-Werror=format=]
   30 |             printf("T%d:[%4d,%4d] a-%i", i, touch_value, touch_filter_value);
      |                                     ~^
      |                                      |
      |                                      int
/home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c:34:13: error: invalid storage class for function 'tp_touch_pad_init'
   34 | static void tp_touch_pad_init(void)
      |             ^~~~~~~~~~~~~~~~~
/home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c:62:1: error: expected declaration or statement at end of input
   62 | }
      | ^
/home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c: At top level:
/home/kali/esp/touch_sensor/components/touch_sensor/touch_sensor.c:43:6: warning: 'init_touch_sensor' defined but not used [-Wunused-function]
   43 | void init_touch_sensor(void)
      |      ^~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/kali/esp/touch_sensor/build/bootloader/esp-idf/esptool_py && /root/.espressif/python_env/idf5.2_py3.11_env/bin/python /home/kali/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/kali/esp/touch_sensor/build/bootloader/bootloader.bin
Bootloader binary size 0x68a0 bytes. 0x760 bytes (7%) free.
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/simon.c.obj
ninja: build stopped: subcommand failed.
